--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "browser-sync": "^2.27.5",
         "browser-sync-webpack-plugin": "^2.3.0",
         "cross-env": "^7.0.3",
+        "formik": "^2.2.9",
         "hamburger-react": "^2.4.1",
         "moment": "^2.29.1",
         "react-bootstrap": "^1.6.3",
@@ -36,6 +37,7 @@
         "react-router-bootstrap": "^0.25.0",
         "react-router-dom": "^5.3.0",
         "react-table": "^7.7.0",
-        "universal-cookie": "^4.0.4"
+        "universal-cookie": "^4.0.4",
+        "yup": "^0.32.9"
     }
 }
