--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "hot": "mix watch --hot",
         "prod": "npm run production",
         "production": "mix --production",
-        "test": "react-scripts test"
+        "test": "jest --env=jsdom",
+        "cypress:open": "cypress open"
     },
     "devDependencies": {
         "@babel/preset-react": "^7.13.13",
@@ -18,6 +19,7 @@
         "axios": "^0.21",
         "bootstrap": "^4.6.0",
         "cypress": "^9.2.0",
+        "jest": "^27.4.5",
         "jest-watch-typeahead": "^1.0.0",
         "jquery": "^3.6",
         "laravel-mix": "^6.0.6",
@@ -42,6 +44,7 @@
         "react-moment": "^1.1.1",
         "react-router-bootstrap": "^0.25.0",
         "react-router-dom": "^5.3.0",
+        "react-scripts": "^5.0.0",
         "react-table": "^7.7.0",
         "universal-cookie": "^4.0.4",
         "yup": "^0.32.9"
